--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "homepage": "https://jinyb09017.github.io/react-gh-pages",
+  "devDependencies": {
+    "gh-pages": "^6.1.0"
   }
 }
