--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://jinyb09017.github.io/react-gh-pages",
+  "homepage": "https://jinyb09017.github.io/react-github-page",
   "devDependencies": {
     "gh-pages": "^6.1.0"
   }
